# terraform-aws-iam-sleuth

./: .envrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .terraform-docs.yml  CHANGELOG.md  Makefile  README.md  changelog.md  go.mod  go.sum  main.tf  package-lock.json  pyproject.toml  renovate.json  requirements.txt  serverless.yml  variables.tf
.circleci/: config.yml
.github/workflows/: pytest.yml  validate.yml
examples/simple/: main.tf  providers.tf  varables.tf  variables.tf
modules/lambda-from-github/: main.tf  variables.tf
modules/lambda-from-github/scripts/: dl-release.sh
schemas/: markdownlint-config-schema.json  pre-commit-config.json  pyproject.json
scripts/: build  make-test  release  user_hash_dump.py
sleuth/: auditor.py  handler.py  requirements-dev.txt  requirements.txt  services.py  sleuth.py
sleuth/sleuth/: auditor.py  services.py
sleuth/tests/: test_auditor.py  test_services.py
test/: terraform_aws_iam_sleuth_test.go  terraform_aws_sleuth_simple_test.go
tests/: test_services.py
